--- a/Chapitre4.tex
+++ b/Chapitre4.tex
@@ -303,7 +303,7 @@ donné dans la Figure~\ref{fig:3_6_segmentation_TF} C et D où l’on montre que
 \label{fig:PCMRi_TF_CHANVESE_concordance}	
 \end{figure}
 
-Notre méthode a été comparée avec une approche standard de type Chan-Vese (\textcolor{red}{Chan and Vese, “Active Contours without Edges.”}) en collaboration avec le docteur Eker Omer. Cette approche est de type contour actif, elle consiste à partir d'un masque initial à trouver une segmentation en développant les contours de l'objet. Dans nos essais, 8 patients ou volontaires ont réalisé des acquisitions IRM en contraste de phase. Au total 182 mesures de vitesses et débits ont été réalisées. La comparaison des deux méthodes sur la mesure de la vitesse a été réalisée via un Bland-Altman (Figure~\ref{fig:PCMRi_TF_CHANVESE}). On remarque que notre méthode a tendance à fournir des vitesses légèrement plus élevées que l'approche de Chan-Vese. Ceci s'explique par l'approche différente de segmentation. En effet, l'algorithme de Chan-Vese fonctionne sur les images de magnitudes et se sert ainsi du contraste structurel. Notre approche en revanche se base uniquement sur la cinétique du signal. Notre approche aura ainsi tendance à segmenter de façon plus nette le sang uniquement, tandis que le Chan-Vese aura tendance à prendre une surface légèrement plus importante. Les résultats de la Figure~\ref{PCMRi_TF_CHANVESE_concordance} montrent une très bonne concordance des deux méthodes avec un nuage de points se situant sur la ligne à 45°. Il semble ainsi que notre méthode permet de mesurer correctement les vitesses.
+Notre méthode a été comparée avec une approche standard de type Chan-Vese (\cite{Chan2001}) en collaboration avec le docteur Eker Omer. Cette approche est de type contour actif, elle consiste à partir d'un masque initial à trouver une segmentation en développant les contours de l'objet. Dans nos essais, 8 patients ou volontaires ont réalisé des acquisitions IRM en contraste de phase. Au total 182 mesures de vitesses et débits ont été réalisées. La comparaison des deux méthodes sur la mesure de la vitesse a été réalisée via un Bland-Altman (Figure~\ref{fig:PCMRi_TF_CHANVESE}). On remarque que notre méthode a tendance à fournir des vitesses légèrement plus élevées que l'approche de Chan-Vese. Ceci s'explique par l'approche différente de segmentation. En effet, l'algorithme de Chan-Vese fonctionne sur les images de magnitudes et se sert ainsi du contraste structurel. Notre approche en revanche se base uniquement sur la cinétique du signal. Notre approche aura ainsi tendance à segmenter de façon plus nette le sang uniquement, tandis que le Chan-Vese aura tendance à prendre une surface légèrement plus importante. Les résultats de la Figure~\ref{PCMRi_TF_CHANVESE_concordance} montrent une très bonne concordance des deux méthodes avec un nuage de points se situant sur la ligne à 45°. Il semble ainsi que notre méthode permet de mesurer correctement les vitesses.
 %%%
 %%%
 \subsection{Perfusion : imagerie par marquage des protons du sang artériel (ASL)}
