--- a/Chapitre6.tex
+++ b/Chapitre6.tex
@@ -17,7 +17,7 @@ Nous allons passer en revue les méthodes d’acquisition et de quantification d
 \section{Acquisition}
 Du point de vue de l’acquisition les différentes méthodes disponibles se distinguent par le décours de la cinétique du marquage des protons. On distingue principalement des techniques de marquage continu (CASL) et le marquage pulsé (PASL).
 
-Présentons tout d’abord le marquage continu (CASL). Cette méthode développée par Williams et collaborateurs en 1992  (\cite{Detre1992},~\cite{Williams1992})consiste à appliquer une impulsion radiofréquence pendant 2 à 4 secondes de façon continue au niveau du plan de marquage, lors de l’application d’un gradient de champs magnétique dans la direction du flux (\cite{Ferre2011}). L’image obtenue dispose d’un haut rapport signal sur bruit mais a en contrepartie deux inconvénients inhérents au marquage continu. Ces inconvénients sont d’une part la présence d’un transfert d’aimantation (MT) et d’autre part un dépôt d’énergie plus important dans les tissus. Le transfert d’aimantation correspond à une contamination du signal au voisinage des protons marqués et va avoir pour conséquence de réduire ce signal et donc d’affecter la mesure de débit, mais aussi de complexifier l’acquisition d’images multi-coupes. Pour limiter ce phénomène spécifique à l’image marquée, un marquage distal est réalisé dans l’acquisition contrôle elle-même afin d’y produire le même effet de transfert d’aimantation.
+Présentons tout d’abord le marquage continu (CASL). Cette méthode développée par Williams et collaborateurs en 1992  (\cite{Detre1992},~\cite{Williams1992}) consiste à appliquer une impulsion radiofréquence pendant 2 à 4 secondes de façon continue au niveau du plan de marquage, lors de l’application d’un gradient de champs magnétique dans la direction du flux (\cite{Ferre2011}). L’image obtenue dispose d’un haut rapport signal sur bruit mais a en contrepartie deux inconvénients inhérents au marquage continu. Ces inconvénients sont d’une part la présence d’un transfert d’aimantation (MT) et d’autre part un dépôt d’énergie plus important dans les tissus. Le transfert d’aimantation correspond à une contamination du signal au voisinage des protons marqués et va avoir pour conséquence de réduire ce signal et donc d’affecter la mesure de débit, mais aussi de complexifier l’acquisition d’images multi-coupes. Pour limiter ce phénomène spécifique à l’image marquée, un marquage distal est réalisé dans l’acquisition contrôle elle-même afin d’y produire le même effet de transfert d’aimantation.
 
 Pour réduire la durée d’application des impulsions, une nouvelle approche a récemment été développée, l’ASL pseudo-continu (pCASL). A la place d’une seule et longue impulsion, 1000 impulsions ou plus sont appliquées à une fréquence d’une impulsion par milliseconde (\cite{Dai2008}). Le marquage est aussi long que dans la méthode continue, mais conduit à une bien meilleure efficacité par réduction de des effets de transfert d’aimantation, le tout en étant compatible avec les systèmes modernes d’antennes. C’est à l’heure actuelle la séquence recommandée en imagerie clinique(\cite{Alsop2014}) bien qu’elle ne soit pas, pour le moment, fournie en version « standard » par tous les constructeurs.
 
@@ -28,16 +28,17 @@ Pour réduire la durée d’application des impulsions, une nouvelle approche a 
 \caption{Différence entre le marquage ASL FAIR et PICORE.}
 \label{fig:5_1_fair_picore}	
 \end{figure}
-Les méthodes d’ASL pulsées (PASL) en revanche sont devenues les plus communes car disponibles en version commerciale chez les principaux constructeurs (\cite{Petersen2006}). Contrairement au CASL, où le sang est inversé en continu dans une zone fine et bien définie, les approches de PASL, se basent sur l’utilisation d’impulsions radiofréquence courtes sur de grandes régions à proximité du cerveau. Parmi les séquences de PASL on peut distinguer deux groupes en fonction de la position de la zone de marquage par rapport aux coupes : les méthodes symétriques et les méthodes asymétriques (\cite{Petersen2006}). Les méthodes symétriques de type FAIR (Flow Alternating Inversion Recovery) utilisent une impulsion d’inversion non sélective lors du contrôle à laquelle est ajoutée un gradient de sélection de coupe pour le marquage (\cite{Wong1997}).  Les méthodes asymétriques, comme la séquence PICORE (proximal inversion with a control for off-resonance effects), utilisent une zone de marquage placé à 1 à 2 cm en amont du volume d’intérêt. Dans cette séquence, le marquage est réalisé en utilisant une impulsion d’inversion sélective à proximité de la zone à imager. L’acquisition contrôle est constituée de la même impulsion radiofréquence, mais appliquée hors résonance de coupe et sans gradients allumés, si bien qu’aucune inversion effective n’est réalisée (\cite{Wong1997},~\cite{Buxton2009}) (Figure~\ref{fig:5_1_fair_picore}). Les deux approches offrant des résultats similaires (\cite{Cavusoglu2009}).
+Les méthodes d’ASL pulsées (PASL) en revanche sont devenues les plus communes car disponibles en version commerciale chez les principaux constructeurs (\cite{Petersen2006}). Contrairement au CASL, où le sang est inversé en continu dans une zone fine et bien définie, les approches de PASL, se basent sur l’utilisation d’impulsions radiofréquence courtes sur de grandes régions à proximité du cerveau. Parmi les séquences de PASL on peut distinguer deux groupes en fonction de la position de la zone de marquage par rapport aux coupes : les méthodes symétriques et les méthodes asymétriques (\cite{Petersen2006}). Les méthodes symétriques de type FAIR (Flow Alternating Inversion Recovery) utilisent une impulsion d’inversion non sélective lors du contrôle à laquelle est ajoutée un gradient de sélection de coupe pour le marquage (\cite{Wong1997}).  Les méthodes asymétriques, comme la séquence PICORE (proximal inversion with a control for off-resonance effects), utilisent une zone de marquage placée à 1 à 2 cm en amont du volume d’intérêt. Dans cette séquence, le marquage est réalisé en utilisant une impulsion d’inversion sélective à proximité de la zone à imager. L’acquisition contrôle est constituée de la même impulsion radiofréquence, mais appliquée hors résonance de coupe et sans gradients allumés, si bien qu’aucune inversion effective n’est réalisée (\cite{Wong1997},~\cite{Buxton2009}) (Figure~\ref{fig:5_1_fair_picore}). Les deux approches offrant des résultats similaires (\cite{Cavusoglu2009}).
 
 %%%
 \begin{figure}[!t]
 \centering
-\includegraphics[width=5cm]{5_2_q2tips}
+\includegraphics[width=12cm]{5_2_q2tips}
 \caption{Séquence PICORE-Q2TIPS.}
 \label{fig:5_2_q2tips}	
 \end{figure}
-Des optimisations de la séquence ont par la suite été réalisées pour réduire la sensibilité au temps de transit comme la séquence Q2TIPS (\cite{Luh1999}, voir figure~\ref{fig:5_2_q2tips}). Ainsi ont été rajoutées à cette séquence des impulsions de saturation (90°) périodiques après un temps T$_1$ (en général 700 ms) permettant de délimiter précisément la largeur temporelle du bolus marqué. On définit ainsi la durée du bolus (T$_{I_1}$), la fin des impulsions de saturation (T$_{I_{1s}}$) et le temps d’inversion (T$_{I_2}$).\\
+Des optimisations de la séquence ont par la suite été réalisées pour réduire la sensibilité au temps de transit comme la séquence Q2TIPS (\cite{Luh1999}, voir figure~\ref{fig:5_2_q2tips}). Ainsi ont été rajoutées à cette séquence des impulsions de saturation (90°) périodiques après un temps T$_1$ (en général 700 ms) permettant de délimiter précisément la largeur temporelle du bolus marqué. On définit ainsi la durée du bolus (T$_{I_1}$), la fin des impulsions de saturation (T$_{I_{1s}}$) et le temps d’inversion (T$_{I_2}$).
+
 Du fait du rapport signal sur bruit faible et de la nécessité de répéter les acquisitions contrôles et label, le choix de la technique d’acquisition des images est très important. Ainsi l’echo planar imaging (EPI) est le plus souvent utilisé. Il autorise une acquisition rapide limitant les artefacts de mouvement et dispose d’un bon rapport signal sur bruit. L’inconvénient de cette séquence est qu’elle peut présenter des distorsions dans les régions de forte susceptibilité magnétique. 
 
 Afin d’améliorer la qualité des images, des séquences 3D ont été développées. Il est possible d’utiliser des séquences single-shot 3D combinant écho de gradient et spin écho (GRASE,~\cite{Gunther2005}). Ces nouvelles séquences permettent d’aboutir à des images mieux résolues, présentant un meilleur rapport signal sur bruit et donc nécessitant moins de répétitions. De plus il devient possible d’utiliser de multiples impulsions d’inversion non sélectives, appelées « background suppression pulses », neutralisant le signal des tissus stationnaires sans affecter le sang marqué, ce qui améliore la qualité de l’image. Enfin grâce aux antennes en réseau phasé, ces séquences bénéficient de l’imagerie parallèle pour réduire la durée d’acquisition, ce qui autorise les protocoles multi temps d’inversion en une durée raisonnable (4 à 5 min).
@@ -54,7 +55,8 @@ Il est bon pour finir de noter aussi l’importance de l’intensité du champ m
 %%%
 %%%
 \section{Quantification}
-La différence ($\Delta$M) images contrôle – images marquées permet d’obtenir une cartographie pondérée en perfusion. Le passage à une valeur absolue quantitative de la perfusion nécessite un modèle qui incorpore le temps de transit, le temps T$_1$ du tissu, le temps T$_1$ et la magnétisation du sang à l’équilibre (M$_0$), la densité de protons et bien entendu les paramètres d’acquisition.\\
+La différence ($\Delta$M) images contrôle – images marquées permet d’obtenir une cartographie pondérée en perfusion. Le passage à une valeur absolue quantitative de la perfusion nécessite un modèle qui incorpore le temps de transit, le temps T$_1$ du tissu, le temps T$_1$ et la magnétisation du sang à l’équilibre (M$_0$), la densité de protons et bien entendu les paramètres d’acquisition.
+
 Le modèle le plus simple proposé (modèle à un compartiment) a été dérivé des équations de Bloch (\cite{Bloch1946}) et repose sur plusieurs hypothèses (\cite{Petersen2006},~\cite{Parkes2005}). Tout d’abord le sang marqué est entièrement délivré à la zone à imager par simple transport dans la circulation. D’autre part les protons marqués du sang sont considérés comme un traceur diffusible, ce qui permet l’échange de magnétisation avec les spins du parenchyme cérébral. Le temps d’inversion est choisi de sorte à correspondre exactement à l’arrivée du sang marqué dans la zone à imager : l’élimination du marquage est négligeable au moment de l’acquisition. Par contre le sang marqué a été complètement éliminé avant les acquisitions suivantes. Enfin on suppose les effets de volume partiels négligeable : les différents sous compartiments du parenchyme (matière grise, matière blanche) possédant potentiellement des T$_1$ différents ne sont pas distingués.
 
 Dans ce modèle la magnétisation des spins de la zone marquée est inversée au temps zéro et relaxe selon le temps caractéristique T$_1$ qui est celui du sang (T$_1$=T$_{1B}$). Lorsque les spins d’eau marqués échangent avec les spins de l’eau du parenchyme cérébral dans le lit capillaire, le temps de relaxation T1 des spins marqués passe du T$_{1B}$ au T$_1$ du tissu (T$_{1t}$,~\cite{Luh1999}). Pour une séquence d’ASL pulsée la modélisation physique montre alors qu’on peut obtenir le débit sanguin cérébral via la formule (\cite{Wang2003}) :
