--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -121,7 +121,7 @@ En raison du caractère invasif des techniques requises pour son étude, les car
 
 Les capillaires représentent des réseaux denses avec une densité de longueur moyenne de 500 mm/mm$^3$ de parenchyme. Des variations de cette valeur sont observées entre la surface du cerveau (613 mm/mm$^3$) et le bas de la scissure (411 mm/mm$^3$)  (\cite{Lauwers2008}). Cela est lié à l’orientation opposée des plis dans ces territoires : la contraction au sommet du gyrus induit géométriquement une augmentation de la densité. La surface d’échange chez l’homme (mesuré par la surface vasculaire par mm$^3$) semble être plus importante que chez le primate (11.74 mm$^2$/mm$^3$ versus 4.5 mm$^2$/mm$^3$) (\cite{Lauwers2008},~\cite{Risser2007}). Enfin, le volume vasculaire par mm$^3$, qui permet d’estimer le volume sanguin cortical, est de l’ordre de 2.4\% à 3\% selon le territoire.
 
-Ces données fournissent une description géométrique quantitative cohérente de la structure des capillaires. Pour chaque mm$^3$, on a 500 mm de capillaires, ce qui pour un diamètre typique inférieur a 10 $\mu$m, donne bien un volume inférieur à 5\% et une surface de 10 mm$^2$ d'échange. Structuralement, si on suppose une organisation réticulée, cubique pour simplifier les calculs, on aboutit pour une longueur moyenne d'un capillaire de 50 $\mu$m à un réseau de 20 unités de coté, soit du point de vue hydrodynamique 400 tubes de 10 $\mu$m de diamètre en parallèle. Ces chiffres, quoique aproximatifs, donneront des ordres de grandeur pour les valeurs des résistances à préciser ultérieurement dans le modèle. 
+Ces données fournissent une description géométrique quantitative cohérente de la structure des capillaires. Pour chaque mm$^3$, on a 500 mm de capillaires, ce qui pour un diamètre typique inférieur a 10 $\mu$m, donne bien un volume inférieur à 5\% et une surface de 10 mm$^2$ d'échange. Structuralement, si on suppose une organisation réticulée, cubique pour simplifier les calculs, on aboutit à un réseau de 20 unités de coté, soit du point de vue hydrodynamique 400 tubes de 10 $\mu$m de diamètre en parallèle. Ces chiffres sont évidemment en l'état de l'imageire  microstructurale très aproximatifs. 
 
 Du point de vue microstructural, les capillaires ne présentent pas de tissu conjonctif périvasculaire, remplacé par les prolongements astrocytaires. On peut noter la présence de jonctions serrées réunissant les cellules endothéliales, et d’un équipement enzymatique riche et parfois spécifique. Les capillaires permettent de fournir les nutriments et le dioxygène aux tissus. Ils jouent un rôle important dans le contrôle du passage des molécules : les macromolécules ne franchissent pas la barrière hématotissulaire tandis que pour les petites molécules la perméabilité est identique à celle de la membrane cellulaire. Ils permettent le passage libre des molécules lipophiles mais requierent l’utilisation de transporteurs membranaires, parfois spécifiques, pour les molécules hydrophiles. Enfin ils assurent le contrôle du passage des cellules, en le réduisant au renouvellement lent mais constant des cellules microgliales par des précurseurs dérivant de la moelle osseuse.
 
